@@ -1,5 +1,10 @@
 
 2010-Nov-08 12:48:33 Mihai Valcu
+	* DESCRIPTION (Date, Version): 0.0-3.2
+	* new function: actlocator.R, locates points on a given actogram. It still needs to be documented. 
+	  A stop should be added if o object is not an actogram
+	
+2010-Nov-08 12:48:33 Mihai Valcu
 	* DESCRIPTION (Date, Version): 0.0-3.1
 	* type = "h" added to function arguments (to be passed to panel.xyplot)
 	* added 'rug' option. if rug = FALSE then panel.rug() is called
